tests/samples/negative/functions/function_type_variadic_non_extern.ax
module function_type_variadic_non_extern;

type Bad = fn(i32, ...) -> i32;

fn main() -> i32 {
    return 0;
}
